# trust-me-bro

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .flake8  Dockerfile  alembic.ini  database.py  main.py  pyproject.toml  redis_client.py  settings.py
backend/alembic/: env.py
backend/alembic/versions/: 20251203_005622_2a10b3614575_initial_migration.py
backend/management/commands/: createsuperuser.py
backend/models/: __init__.py  link.py  user.py
backend/routes/: routes.py
backend/routes/admin/: routes.py  schemas.py
backend/routes/auth/: routes.py  schemas.py  service.py
backend/routes/links/: __init__.py  routes.py  schemas.py
backend/routes/redirect/: routes.py  schemas.py  service.py
backend/routes/users/: routes.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  config.ts  index.css  types.ts  vite-env.d.ts
frontend/src/components/: AdminDashboard.css  AdminDashboard.tsx  Dashboard.css  Dashboard.tsx  LandingPage.css  LandingPage.tsx  LinksTab.tsx  LoginForm.tsx  MinerMeme.css  MinerMeme.tsx  RegisterForm.css  RegisterForm.tsx  UsersTab.tsx
